--- a/electrafind_web/src/components/ServiceStation/ServiceStation.css
+++ b/electrafind_web/src/components/ServiceStation/ServiceStation.css
@@ -1,6 +1,6 @@
 .service-container{
   width: 100%;
-  min-height: 100vh;
+  min-height: 300px;
   background: linear-gradient(rgba(17, 15, 15, 1),rgba(17, 15, 15, 0.6)), url(../../assets/service.png);
   background-size: cover;
   background-position: center;
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  /* border: red 1px solid; */
+  border: red 1px solid;
 }
 
 .form-container {
@@ -20,7 +20,7 @@
   color: #fff;
   justify-content: center;
   text-align: center;
-  /* border: red 1px solid; */
+  border: red 1px solid;
   padding: 25px;
   border-radius: 20px;
 }
@@ -30,6 +30,7 @@
   text-align: center;
   color: #fff;
   font-weight: 500;
+  border: red 1px solid;
 }
 
 .form-container .input-box{
@@ -37,6 +38,8 @@
   width: 100%;
   height: 50px;
   margin: 30px auto;
+  border: red 1px solid;
+  align-items: center;
 }
 .form-container .error-message {
   /* color: #ff4d4d; */
@@ -57,6 +60,7 @@
   border: 1px rgba(255, 255, 255, 0.2) solid;
   border-radius: 40px;
   padding-left: 20px;
+  border: red 1px solid;
 }
 
 .input-box input::placeholder{
@@ -66,7 +70,7 @@
 .service-benefit{
   margin-top: 30px;
   background: transparent;
-  /* border: 1px solid rgba(255, 255, 255, 0.2); */
+  border: red 1px solid;
   border-radius: 20px;
   backdrop-filter: blur(20px);
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
